--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -248,7 +248,6 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
-    "antd": "^4.15.6",
     "axios": "^0.21.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
@@ -256,10 +255,12 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "socket.io-client": "^4.1.2",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "styled-components": "^5.3.0"
   },
   "devEngines": {
     "node": ">=10.x",
